# todolist-python-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: e80e30f6ca4c_initial_tables_for_project_and_task.py
app/: main.py
app/api/controller_schemas/requests/: __init__.py  project_request_schema.py  task_request_schema.py
app/api/controller_schemas/responses/: __init__.py  project_response_schema.py  task_response_schema.py
app/api/controllers/: project_controller.py  task_controller.py
app/cli/: main.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: base.py  session.py
app/exceptions/: base.py
app/models/: project.py  task.py
app/repositories/: project_repository.py  task_repository.py
app/services/: project_service.py  task_service.py
cli/: main.py
core/: models.py  services.py
core/models/: __init__.py
core/services/: project_service.py  task_service.py
storage/: in_memory.py
